--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,3 +1,9 @@
 FROM python:3.11
+
+RUN mkdir /app
+COPY code/ /app
+WORKDIR /app
+
 ADD requirements.txt /requirements.txt
 RUN pip install -r /requirements.txt
+
