--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,8 +1,8 @@
 FROM python:3.11
 
-#RUN mkdir /app
-#COPY code/ /app
-#WORKDIR /app
+RUN mkdir /app
+COPY code/ /app
+WORKDIR /app
 
 ADD requirements.txt /requirements.txt
 RUN pip install -r /requirements.txt
